@@ -26,7 +26,7 @@ public class StreamToolCallsReceiver {
     private BiFunction<String, ChatCompletion, StreamToolCallsRequest> toolCallsHandler;
     private CountDownLatch countDownLatch;
     private final OpenAiService openAiService;
-    private StreamChatCompletionListener listener;
+    private StreamListener<ChatCompletion> listener;
 
     private long completionTokens = 0;
 
@@ -41,7 +41,7 @@ public class StreamToolCallsReceiver {
     public StreamToolCallsReceiver(OpenAiService openAiService,
                                    String originalRequestId,
                                    BiFunction<String, ChatCompletion, StreamToolCallsRequest> toolCallsHandler,
-                                   StreamChatCompletionListener listener,
+                                   StreamListener<ChatCompletion> listener,
                                    CountDownLatch countDownLatch) {
         this.chatCompletions = new ArrayList<>();
         this.originalRequestId = originalRequestId;
@@ -55,8 +55,8 @@ public class StreamToolCallsReceiver {
         if (Preconditions.isBlank(active)) {
             if (Preconditions.isNotBlank(chatCompletion)) {
                 if (Preconditions.isNotBlank(chatCompletion.getChoices())
-                        && Preconditions.isNotBlank(chatCompletion.getChoices().get(0).getDelta())) {
-                    ChatMessage delta = chatCompletion.getChoices().get(0).getDelta();
+                        && Preconditions.isNotBlank(chatCompletion.getChoices().getFirst().getDelta())) {
+                    ChatMessage delta = chatCompletion.getChoices().getFirst().getDelta();
                     if (Preconditions.isNotBlank(delta.getContent()) || "".equals(delta.getContent())) {
                         active = false;
                     } else {
@@ -92,13 +92,13 @@ public class StreamToolCallsReceiver {
     public boolean receiveDone(String requestId) {
         if (init(null)) {
             if (active) {
-                ChatCompletion result = chatCompletions.get(0);
+                ChatCompletion result = chatCompletions.getFirst();
                 List<ToolCall> toolCalls = new ArrayList<>();
                 for (ChatCompletion chatCompletion : chatCompletions) {
                     if (Preconditions.isNotBlank(chatCompletion.getChoices())
-                            && Preconditions.isNotBlank(chatCompletion.getChoices().get(0).getDelta())
-                            && Preconditions.isNotBlank(chatCompletion.getChoices().get(0).getDelta().getToolCalls())) {
-                        ToolCall toolCall = chatCompletion.getChoices().get(0).getDelta().getToolCalls().get(0);
+                            && Preconditions.isNotBlank(chatCompletion.getChoices().getFirst().getDelta())
+                            && Preconditions.isNotBlank(chatCompletion.getChoices().getFirst().getDelta().getToolCalls())) {
+                        ToolCall toolCall = chatCompletion.getChoices().getFirst().getDelta().getToolCalls().getFirst();
                         if (Preconditions.isNotBlank(toolCall.getId())) {
                             // new function start
                             toolCalls.add(toolCall);
@@ -106,13 +106,13 @@ public class StreamToolCallsReceiver {
                             // appending part
                             String appendArgs = toolCall.getFunction().getArguments();
                             if (Preconditions.isNotBlank(appendArgs)) {
-                                ToolCall tc = toolCalls.get(toolCalls.size() - 1);
+                                ToolCall tc = toolCalls.getLast();
                                 tc.getFunction().setArguments(tc.getFunction().getArguments() + appendArgs);
                             }
                         }
                     }
                 }
-                result.getChoices().get(0).getDelta().setToolCalls(toolCalls);
+                result.getChoices().getFirst().getDelta().setToolCalls(toolCalls);
                 StreamToolCallsRequest request = toolCallsHandler.apply(requestId, result);
                 this.requestId = request.getRequestId();
                 createChatCompletion(request.getRequest());
@@ -123,7 +123,7 @@ public class StreamToolCallsReceiver {
     }
 
     private void createChatCompletion(CreateChatCompletionRequest request) {
-        openAiService.createSteamChatCompletion(requestId, request, new StreamChatCompletionListener() {
+        openAiService.createSteamChatCompletion(requestId, request, new StreamListener<>() {
             @Override
             public void onOpen(String requestId, Response response) {
                 log.debug("on open {}", requestId);
